Scroll IME list to visible when using tab key.

When switches the focused IME item with Tab key, scroll the IME detailed view to make the focused item visible.

BUG=668035
TEST=Verified on local build.

Review-Url: https://codereview.chromium.org/2537893003
Cr-Commit-Position: refs/heads/master@{#435494}

Former-commit-id: c5f7e4111cf2110cc972a4d7bcb8f90651dfcae6